@@ -1,3 +1,12 @@
+2008-12-10  Neil Roberts  <neil@linux.intel.com>
+
+	Bug 1323 - ClutterBehaviorDepth conflicts with other behaviors
+
+	* clutter/clutter-behaviour-ellipse.c (actor_apply_knot_foreach):
+	Don't set the depth if there is no x or y tilt. That way it can
+	still be used in conjunction with ClutterBehaviourDepth. Thanks to
+	Tonny Tzeng.
+
 2008-12-08  Emmanuele Bassi  <ebassi@linux.intel.com>
 
 	* clutter/clutter-binding-pool.h: Fix the ActivateFunc
